crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__pair_projection__literal_first.snap
---
source: crates/nash-codegen/src/optimizer_tests/pair_projection.rs
expression: "format!(\"{}\\n--- isolated Core before\\n{}\\n--- isolated Core after\\n{}\",\nfixture.snapshot(), pretty(anf), pretty(isolated))"
---
--- unoptimized Core
case@Pair (con (pair integer integer) (7, 8)) of
  Pair x#1 y#2 -> x#1
--- unoptimized UPLC
(program 1.1.0
  (case (con (pair integer integer) (7, 8)) (lam x_1 (lam y_2 x_1))))
--- optimized Core
case@Pair (con (pair integer integer) (7, 8)) of
  Pair x#3 y#4 -> x#3
--- optimized UPLC
(program 1.1.0
  (case (con (pair integer integer) (7, 8)) (lam x_1 (lam y_2 x_1))))
--- result
(con integer 7)
--- logs
[]
--- budget
cpu: 80100, memory: 600
--- isolated Core before
case@Pair (con (pair integer integer) (7, 8)) of
  Pair x#1 y#2 -> x#1
--- isolated Core after
case@Pair (con (pair integer integer) (7, 8)) of
  Pair x#1 y#2 -> x#1
