crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__pair_projection__made_data_second.snap
---
source: crates/nash-codegen/src/optimizer_tests/pair_projection.rs
expression: "format!(\"{}\\n--- isolated Core before\\n{}\\n--- isolated Core after\\n{}\",\nfixture.snapshot(), pretty(anf), pretty(isolated))"
---
--- unoptimized Core
case@Pair mkPairData (con data (I 7)) (con data (I 7)) of
  Pair x#11 y#12 -> y#12
--- unoptimized UPLC
(program 1.1.0
  (case
    [[(builtin mkPairData) (con data (I 7))] (con data (I 7))]
    (lam x_11 (lam y_12 y_12))))
--- optimized Core
case@Pair (con (pair data data) ((I 7), (I 7))) of
  Pair x#1 y#2 -> y#2
--- optimized UPLC
(program 1.1.0
  (case (con (pair data data) ((I 7), (I 7))) (lam x_3 (lam y_4 y_4))))
--- result
(con data (I 7))
--- logs
[]
--- budget
cpu: 155646, memory: 1032
--- isolated Core before
let anf#88 : pair Data Data = mkPairData (con data (I 7)) (con data (I 7)) in
case@Pair anf#88 of
  Pair x#11 y#12 -> y#12
--- isolated Core after
let anf#88 : pair Data Data = mkPairData (con data (I 7)) (con data (I 7)) in
case@Pair anf#88 of
  Pair x#11 y#12 -> y#12
