crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__pair_projection__native_constructor_first.snap
---
source: crates/nash-codegen/src/optimizer_tests/pair_projection.rs
expression: "format!(\"{}\\n--- isolated Core before\\n{}\\n--- isolated Core after\\n{}\",\nfixture.snapshot(), pretty(anf), pretty(isolated))"
---
--- unoptimized Core
case@Pair constr 0 7 8 of
  Pair x#29 y#30 -> x#29
--- unoptimized UPLC
(program 1.1.0
  (case (constr 0 (con integer 7) (con integer 8)) (lam x_29 (lam y_30 x_29))))
--- optimized Core
let anf#3 : pair int int = constr 0 7 8 in
case@Pair anf#3 of
  Pair x#1 y#2 -> x#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_4 (case anf_4 (lam x_5 (lam y_6 x_5))))
    (constr 0 (con integer 7) (con integer 8))])
--- result
(con integer 7)
--- logs
[]
--- budget
cpu: 112100, memory: 800
--- isolated Core before
let anf#97 : pair int int = constr 0 7 8 in
case@Pair anf#97 of
  Pair x#29 y#30 -> x#29
--- isolated Core after
let anf#97 : pair int int = constr 0 7 8 in
case@Pair anf#97 of
  Pair x#29 y#30 -> x#29
