crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__pair_projection__neither.snap
---
source: crates/nash-codegen/src/optimizer_tests/pair_projection.rs
expression: "format!(\"{}\\n--- isolated Core before\\n{}\\n--- isolated Core after\\n{}\",\nfixture.snapshot(), pretty(anf), pretty(isolated))"
---
--- unoptimized Core
case@Pair (trace "subject" in (con (pair integer integer) (7, 8))) of
  Pair x#37 y#38 -> 42
--- unoptimized UPLC
(program 1.1.0
  (case
    (force
      [[(force (builtin trace)) (con string "subject")]
        (delay (con (pair integer integer) (7, 8)))])
    (lam x_37 (lam y_38 (con integer 42)))))
--- optimized Core
let anf#3 : pair int int = trace "subject" in (con (pair integer integer) (7, 8)) in
case@Pair anf#3 of
  Pair x#1 y#2 -> 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam anf_4 (case anf_4 (lam x_5 (lam y_6 (con integer 42)))))
      (force
        [[builtin_7 (con string "subject")] (delay (con (pair integer integer) (7, 8)))])])
    (force (builtin trace))])
--- result
(con integer 42)
--- logs
["subject"]
--- budget
cpu: 251598, memory: 1332
--- isolated Core before
let anf#101 : pair int int = trace "subject" in (con (pair integer integer) (7, 8)) in
case@Pair anf#101 of
  Pair x#37 y#38 -> 42
--- isolated Core after
let anf#101 : pair int int = trace "subject" in (con (pair integer integer) (7, 8)) in
case@Pair anf#101 of
  Pair x#37 y#38 -> 42
