crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__pair_projection__repeated.snap
---
source: crates/nash-codegen/src/optimizer_tests/pair_projection.rs
expression: "format!(\"{}\\n--- isolated Core before\\n{}\\n--- isolated Core after\\n{}\",\nfixture.snapshot(), pretty(anf), pretty(isolated))"
---
--- unoptimized Core
case@Pair (trace "subject" in (con (pair integer integer) (7, 8))) of
  Pair x#44 y#45 -> addInteger x#44 x#44
--- unoptimized UPLC
(program 1.1.0
  (case
    (force
      [[(force (builtin trace)) (con string "subject")]
        (delay (con (pair integer integer) (7, 8)))])
    (lam x_44 (lam y_45 [[(builtin addInteger) x_44] x_44]))))
--- optimized Core
let anf#3 : pair int int = trace "subject" in (con (pair integer integer) (7, 8)) in
case@Pair anf#3 of
  Pair x#1 y#2 -> addInteger x#1 x#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam anf_4 (case anf_4 (lam x_5 (lam y_6 [[(builtin addInteger) x_5] x_5]))))
      (force
        [[builtin_7 (con string "subject")] (delay (con (pair integer integer) (7, 8)))])])
    (force (builtin trace))])
--- result
(con integer 14)
--- logs
["subject"]
--- budget
cpu: 416806, memory: 1734
--- isolated Core before
let anf#107 : pair int int = trace "subject" in (con (pair integer integer) (7, 8)) in
case@Pair anf#107 of
  Pair x#44 y#45 -> addInteger x#44 x#44
--- isolated Core after
let anf#107 : pair int int = trace "subject" in (con (pair integer integer) (7, 8)) in
case@Pair anf#107 of
  Pair x#44 y#45 -> addInteger x#44 x#44
